@@ -21,7 +21,6 @@ package org.apache.fop.pdf;
 
 import java.io.IOException;
 import java.io.OutputStream;
-import java.io.Writer;
 
 import org.apache.commons.io.output.CountingOutputStream;
 
@@ -30,16 +29,48 @@ import org.apache.fop.util.CloseBlockerOutputStream;
 /**
  * This is an abstract base class for PDF streams.
  */
-public abstract class AbstractPDFStream extends PDFDictionary {
+public abstract class AbstractPDFStream extends PDFObject {
+
+    private final PDFDictionary dictionary;
 
     /** The filters that should be applied */
     private PDFFilterList filters;
 
+    private final boolean encodeOnTheFly;
+
+    protected AbstractPDFStream() {
+        this(true);
+    }
+
+    protected AbstractPDFStream(PDFDictionary dictionary) {
+        this(dictionary, true);
+    }
+
+    protected AbstractPDFStream(boolean encodeOnTheFly) {
+        this(new PDFDictionary(), encodeOnTheFly);
+    }
+
+    protected AbstractPDFStream(PDFDictionary dictionary, boolean encodeOnTheFly) {
+        this.dictionary = dictionary;
+        this.encodeOnTheFly = encodeOnTheFly;
+    }
+
+    protected final PDFDictionary getDictionary() {
+        return dictionary;
+    }
+
+    protected Object get(String key) {
+        return dictionary.get(key);
+    }
+
     /**
-     * Constructor for AbstractPDFStream.
+     * Puts the given object in the dictionary associated to this stream.
+     *
+     * @param key the key in the dictionary
+     * @param value the value to store
      */
-    public AbstractPDFStream() {
-        super();
+    public void put(String key, Object value) {
+        dictionary.put(key, value);
     }
 
     /**
@@ -131,8 +162,8 @@ public abstract class AbstractPDFStream extends PDFDictionary {
      */
     protected StreamCache encodeStream() throws IOException {
         //Allocate a temporary buffer to find out the size of the encoded stream
-        final StreamCache encodedStream = StreamCacheFactory.getInstance().
-                createStreamCache(getSizeHint());
+        final StreamCache encodedStream = StreamCacheFactory.getInstance()
+                .createStreamCache(getSizeHint());
         OutputStream filteredOutput
                 = getFilterList().applyFilters(encodedStream.getOutputStream());
         outputRawStreamData(filteredOutput);
@@ -164,7 +195,7 @@ public abstract class AbstractPDFStream extends PDFDictionary {
         OutputStream filteredOutput = getFilterList().applyFilters(cout);
         outputRawStreamData(filteredOutput);
         filteredOutput.close();
-        refLength.setNumber(new Integer(cout.getCount()));
+        refLength.setNumber(Integer.valueOf(cout.getCount()));
         bytesWritten += cout.getCount();
 
         //Stream trailer
@@ -180,31 +211,30 @@ public abstract class AbstractPDFStream extends PDFDictionary {
      * byte arrays around so much
      * {@inheritDoc}
      */
-    protected int output(OutputStream stream) throws IOException {
+    @Override
+    public int output(OutputStream stream) throws IOException {
         setupFilterList();
 
         CountingOutputStream cout = new CountingOutputStream(stream);
-        Writer writer = PDFDocument.getWriterFor(cout);
-        writer.write(getObjectID());
-        //int length = 0;
+        StringBuilder textBuffer = new StringBuilder(64);
 
         StreamCache encodedStream = null;
         PDFNumber refLength = null;
         final Object lengthEntry;
-        if (isEncodingOnTheFly()) {
+        if (encodeOnTheFly) {
             refLength = new PDFNumber();
             getDocumentSafely().registerObject(refLength);
             lengthEntry = refLength;
         } else {
             encodedStream = encodeStream();
-            lengthEntry = new Integer(encodedStream.getSize() + 1);
+            lengthEntry = Integer.valueOf(encodedStream.getSize() + 1);
         }
 
         populateStreamDict(lengthEntry);
-        writeDictionary(cout, writer);
+        dictionary.writeDictionary(cout, textBuffer);
 
         //Send encoded stream to target OutputStream
-        writer.flush();
+        PDFDocument.flushTextBuffer(textBuffer, cout);
         if (encodedStream == null) {
             encodeAndWriteStream(cout, refLength);
         } else {
@@ -212,18 +242,14 @@ public abstract class AbstractPDFStream extends PDFDictionary {
             encodedStream.clear(); //Encoded stream can now be discarded
         }
 
-        writer.write("\nendobj\n");
-        writer.flush();
+        PDFDocument.flushTextBuffer(textBuffer, cout);
         return cout.getCount();
     }
 
-    /**
-     * Indicates whether encoding may happen without buffering the encoded data. If this method
-     * returns true, the /Length entry will be an indirect object, a direct object otherwise.
-     * @return true if encoding should happen "on the fly"
-     */
-    protected boolean isEncodingOnTheFly() {
-        return getDocument().isEncodingOnTheFly();
+    @Override
+    public void setDocument(PDFDocument doc) {
+        dictionary.setDocument(doc);
+        super.setDocument(doc);
     }
 
     /**
@@ -234,7 +260,7 @@ public abstract class AbstractPDFStream extends PDFDictionary {
     protected void populateStreamDict(Object lengthEntry) {
         put("Length", lengthEntry);
         if (!getFilterList().isDisableAllFilters()) {
-            getFilterList().putFilterDictEntries(this);
+            getFilterList().putFilterDictEntries(dictionary);
         }
     }
 
